--- a/src/app/modules/deck-shared/crypt/crypt.component.html
+++ b/src/app/modules/deck-shared/crypt/crypt.component.html
@@ -28,6 +28,9 @@
       <span class="fw-normal">4+</span>&nbsp;<span class="text-info">{{getDrawProbability(4)}}%</span>
       }
     </h6>
+    @if(card.collection){
+    <app-collection-card-mini-stats [cardId]="card.id"></app-collection-card-mini-stats>
+    }
   </ng-template>
   <div class="row align-items-center">
     <div class="col-6">
@@ -54,6 +57,11 @@
         </div>
         }
         <div class="col-9 align-items-center">
+          @if(card.collection){
+          <div class="float-start me-1">
+            <app-collection-card-tracker [card]="card"></app-collection-card-tracker>
+          </div>
+          }
           @if( crypt.i18n && crypt.i18n.name !== crypt.name ){
           <div class="float-start d-flex flex-column">
             <span class="text-body">{{ crypt.i18n.name }}</span>
