--- a/src/app/modules/deck-shared/crypt/crypt.component.html
+++ b/src/app/modules/deck-shared/crypt/crypt.component.html
@@ -29,7 +29,7 @@
       }
     </h6>
     @if(card.collection){
-    <app-collection-card-mini-stats [cardId]="card.id"></app-collection-card-mini-stats>
+    <app-collection-card-mini-stats [card]="card"></app-collection-card-mini-stats>
     }
   </ng-template>
   <div class="row align-items-center">
