--- a/src/app/modules/deck/deck.component.html
+++ b/src/app/modules/deck/deck.component.html
@@ -128,7 +128,7 @@
                       'btn-primary': collectionTracker
                     }" (click)="onCollectionTracker()" *isLogged="true">
                     <i class="bi me-2" [ngClass]="{
-                      'bi-check-square': !collectionTracker,
+                      'bi-square': !collectionTracker,
                       'bi-check-square-fill': collectionTracker
                     }"></i>{{ t('collection_tracker') }}
                   </button>
