--- a/src/app/modules/deck-builder/crypt-builder/crypt-builder.component.html
+++ b/src/app/modules/deck-builder/crypt-builder/crypt-builder.component.html
@@ -82,7 +82,7 @@
           </button>
         </div>
         }
-        @for (crypt of (crypt$ | async)! ; track trackByFn($index, crypt)) {
+        @for (crypt of (crypt$ | async)! ; track crypt.id) {
         <ul class="col list-group">
           <app-crypt [card]="getCard(crypt)" [cryptSize]="(cryptSize$ | async)!" [withControls]="true"
             (cardAdded)="addCard($event)" (cardRemoved)="removeCard($event)"></app-crypt>
