--- a/src/app/modules/deck-builder/library-builder/library-builder.component.html
+++ b/src/app/modules/deck-builder/library-builder/library-builder.component.html
@@ -75,7 +75,7 @@
           </button>
         </div>
         }
-        @for (library of (library$ | async)! ; track trackByFn($index, library)) {
+        @for (library of (library$ | async)! ; track library.id) {
         <ul class="col list-group">
           <app-library [card]="getCard(library)" [librarySize]="(librarySize$ | async)!" [withControls]="true"
             (cardAdded)="addCard($event)" (cardRemoved)="removeCard($event)"></app-library>
