--- a/src/app/modules/decks/filter/deck-filters.component.html
+++ b/src/app/modules/decks/filter/deck-filters.component.html
@@ -54,6 +54,24 @@
       </app-discipline-filter>
     </div>
     <app-card-filter #cardFilter></app-card-filter>
+    <div class="row g-1 mb-2" *isLogged="true">
+      <div class="form-label text-primary fw-bold">
+        <i class="bi bi-collection me-2"></i>{{ t('collection_tracker') }}
+      </div>
+      <div class="form-check form-switch mb-2">
+        <input class="form-check-input" type="checkbox" role="switch" id="collectionTrackerCheck"
+          formControlName="collectionTracker" />
+        <label class="form-check-label" for="collectionTrackerCheck">{{ t('filter_by_collection') }}</label>
+      </div>
+      @if (collectionTracker) {
+      <div class="col-12 mb-2">
+        <label for="collectionPercentage" class="form-label text-secondary fw-bold">{{ t('deck_completion') }}</label>
+        <ngx-slider id="collectionPercentage" [options]="{ floor: 0, ceil: 100, step: 5, showSelectionBar: true }"
+          formControlName="collectionPercentage">
+        </ngx-slider>
+      </div>
+      }
+    </div>
     <label class="form-label text-primary fw-bold">
       <i class="bi bi-pie-chart me-2"></i>{{ t('composition') }}
     </label>
@@ -158,7 +176,7 @@
           (valueChanges)="onProportionChange('event',$event)"></app-card-proportion>
       </div>
     </div>
-    <label class="form-label text-primary fw-bold">{{ t('other_filters') }}</label>
+    <div class="form-label text-primary fw-bold">{{ t('other_filters') }}</div>
     <div class="form-floating mb-2">
       <input type="text" class="form-control" id="deckName" [placeholder]="t('name')" formControlName="name" />
       <label for="deckName" class="text-primary"><i class="bi bi-type me-2"></i>{{ t('name') }}</label>
