--- a/src/app/modules/deck-builder/crypt-builder-filter/crypt-builder-filter.component.html
+++ b/src/app/modules/deck-builder/crypt-builder-filter/crypt-builder-filter.component.html
@@ -61,6 +61,9 @@
       <option selected></option>
       @for (set of (sets$ | async); track set) {
       <option [value]="set.abbrev">
+        @if(set.releaseDate){
+        {{ set.releaseDate | date:'yyyy' }} -
+        }
         {{ set.fullName }}
       </option>
       }
