--- a/src/app/modules/deck-builder/library-builder-filter/library-builder-filter.component.html
+++ b/src/app/modules/deck-builder/library-builder-filter/library-builder-filter.component.html
@@ -41,6 +41,9 @@
       <option selected></option>
       @for (set of (sets$ | async); track set) {
       <option [value]="set.abbrev">
+        @if(set.releaseDate){
+        {{ set.releaseDate | date:'yyyy' }} -
+        }
         {{ set.fullName }}
       </option>
       }
