--- a/src/app/modules/decks/decks.component.html
+++ b/src/app/modules/decks/decks.component.html
@@ -61,8 +61,8 @@
         'col-12': (isMobileOrTablet$ | async),
         'col-9': !(isMobileOrTablet$ | async)
       }">
-        <div class="decks-container" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="100"
-          (scrolled)="onScroll()">
+        <div class="decks-container" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="150"
+          [infiniteScrollDisabled]="(isLoading$ | async)!" (scrolled)="onScroll()">
           @if ((decks$ | async)!; as decks) {
           @for (deck of decks; track deck) {
           <div class="col-12 px-2">
@@ -91,6 +91,12 @@
         <div class="alert alert-light">
           <app-loading></app-loading>
           <div style="height: 100vh"></div>
+        </div>
+        } @else if((hasMore$ | async)!) {
+        <div class="d-flex justify-content-center my-3">
+          <button type="button" class="btn btn-primary" (click)="onScroll()">
+            {{ t('show_more') }}
+          </button>
         </div>
         }
       </main>
