--- a/src/app/modules/deck-card/deck-card.component.html
+++ b/src/app/modules/deck-card/deck-card.component.html
@@ -46,12 +46,17 @@
       <div class="d-flex align-items-center gap-2">
         <div class="clan-badges">
           @for (icon of deck.clanIcons; track icon) {
-          <i class="vtes vtes-small" [ngClass]="icon"></i>
+          <i class="vtes" [ngClass]="icon"></i>
           }
         </div>
+        @if(deck.pathIcon){
+        <div class="path-badges">
+          <i class="vtes path" [ngClass]="deck.pathIcon"></i>
+        </div>
+        }
         <div class="discipline-badges">
           @for (icon of deck.disciplineIcons; track icon) {
-          <i class="vtes vtes-small border rounded-1 border-light" [ngClass]="icon"></i>
+          <i class="vtes border rounded-1 border-light" [ngClass]="icon"></i>
           }
         </div>
       </div>
